--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">HappyHome</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_fraction">FractionActivity</string>
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
